fix overflow

--- a/assets/styles/podcasts.less
+++ b/assets/styles/podcasts.less
@@ -7,7 +7,6 @@
     .podcast {
 
       box-sizing: border-box;
-      overflow: hidden;
       opacity: 0.0001;
 
       a {
